--- a/app/src/main/res/layout/activity_login_form.xml
+++ b/app/src/main/res/layout/activity_login_form.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/White2"
+    android:background="@color/White3"
     tools:context=".LoginForm">
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="@color/White3"
+        android:background="@color/Purewhite"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
