--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="White2">#F2F2F2</color>
     <color name="Black3">#202020</color>
     <color name="White3">#F8F8F8</color>
+    <color name="Purewhite">#FFFFFF</color>
     <color name="Browngrey87">#A7A7A7</color>
     <color name="Browngrey">#A7A7A7</color>
     <color name="Warmblue">#3E43E9</color>
